[Frontend] Avoid compressing message text too much
Follow-up to commit 63ce26400b9359898bfe87c0f332088f94846978.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -163,7 +163,7 @@ body {
   color: inherit;
 }
 .message > .line .content {
-  min-width: 0;
+  min-width: 10em;
 }
 .message > .line .content .message-text {
   display: block;
